# SlightCSV

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: .gitignore  badges.md  intro.md  slightcsv
platform/linux32/: toolchain-linux32.cmake
platform/linux64/: toolchain-linux64.cmake
platform/win32/: toolchain-win32.cmake
platform/win64/: toolchain-win64.cmake
src/: CMakeLists.txt  main.cpp  slightcsv.cpp  slightcsv.hpp  slightcsvprivate.hpp  slightmatrix.cpp  slightmatrix.hpp  slightrow.cpp  slightrow.hpp  u8char.cpp  u8char.hpp
src/demo/: CMakeLists.txt  main.cpp  stopwatch.cpp  stopwatch.hpp
test/: CMakeLists.txt  ascii.csv  env_data.csv  env_data_0.csv  env_data_2.csv  env_data_short.csv  env_data_short_dh.csv  env_data_sli.csv  main.cpp  test.cpp  test_include.hpp  test_slightcsv.cpp  test_slightmatrix.cpp  test_slightrow.cpp  test_u8char.cpp  utf8.csv  utf8_test.csv  utf8_test_bom.csv
